==> fsouza/qmk_firmware/zsa_firmware/lib/chibios-contrib/os/hal/ports/WB32/WB32F3G71xx/hal_efl_lld.c <==
#include <string.h>
#include "hal.h"
#define WB32_FLASH_LINE_SIZE                8U
#define WB32_FLASH_LINE_MASK                (WB32_FLASH_LINE_SIZE - 1U)
#define WB32_FLASH_PAGE_SIZE                256U
#define WB32_FLASH_PAGE_MASK                (WB32_FLASH_PAGE_SIZE - 1U)
#define FLASH_OP_RAM_CODE                   {0xBF006008, 0x06006808, 0x4770D4FC}
#define PRE_OP() ((void (*)(void))((unsigned int)(pre_op_code) | 0x01))()

void efl_lld_start(EFlashDriver *eflp) {

  PWR->ANAKEY1 = 0x03;
  PWR->ANAKEY2 = 0x0C;
  /* Enables or disables the Internal 48MHz oscillator (FHSI). */
  ANCTL->FHSIENR = ENABLE;
  /* Locks write to ANCTL registers */
  PWR->ANAKEY1 = 0x00;
  PWR->ANAKEY2 = 0x00;
}

flash_error_t efl_lld_program(void *instance, flash_offset_t offset,
                              size_t n, const uint8_t *pp) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  flash_error_t err = FLASH_NO_ERROR;

  osalDbgCheck((instance != NULL) && (pp != NULL) && (n > 0U));
  osalDbgCheck(((size_t)offset + n) <= (size_t)efl_lld_descriptor.size);

  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No programming while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* FLASH_PGM state while the operation is performed.*/
  devp->state = FLASH_PGM;

  /* Actual program implementation.*/
  while (n > 0U) {
    volatile uint32_t *address;

    union {
      uint32_t  w[WB32_FLASH_PAGE_SIZE / sizeof (uint32_t)];
      uint8_t   b[WB32_FLASH_PAGE_SIZE / sizeof (uint8_t)];
    } line;

    /* Programming address aligned to flash pages.*/
    address = (volatile uint32_t *)(efl_lld_descriptor.address +
                                    (offset & ~WB32_FLASH_PAGE_MASK));

    memcpy((void *)&line.b[0], (const void *)address, WB32_FLASH_PAGE_SIZE);

#ifndef WB32_FLASH_PROGRAM_NO_ERASE
    /* Erase page. */
    err = wb32_flash_erase_page(devp, (uint32_t)address);
    if (err != FLASH_NO_ERROR) {
      break;
    }
#endif

    /* Clear page latch. */
    err = wb32_flash_clear_page_latch(devp);
    if (err != FLASH_NO_ERROR) {
      break;
    }

    /* Copying data inside the prepared page.*/
    do {
      line.b[offset & WB32_FLASH_PAGE_MASK] = *pp;
      offset++;
      n--;
      pp++;
    }
    while ((n > 0U) & ((offset & WB32_FLASH_PAGE_MASK) != 0U));

    for (int i = 0; i < (WB32_FLASH_PAGE_SIZE / sizeof(uint32_t)); i++) {
      devp->flash->BUF[i] = line.w[i];
    }

    /* Programming page.*/
    err = wb32_flash_program_page(devp, (uint32_t)address);
    if (err != FLASH_NO_ERROR) {
      break;
    }
    /* Check for flash error.*/
    if (address[0] != line.w[0]) {
      err = FLASH_ERROR_PROGRAM;
      break;
    }
  }

  /* Ready state again.*/
  devp->state = FLASH_READY;

  return err;
}

flash_error_t efl_lld_start_erase_sector(void *instance,
                                         flash_sector_t sector) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  flash_error_t err = FLASH_NO_ERROR;

  osalDbgCheck(instance != NULL);
  osalDbgCheck(sector < efl_lld_descriptor.sectors_count);
  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No erasing while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* FLASH_PGM state while the operation is performed.*/
  devp->state = FLASH_ERASE;

  /* Set the page.*/

  err = wb32_flash_erase_page(devp, (uint32_t)(efl_lld_descriptor.address +
                              flashGetSectorOffset(getBaseFlash(devp), sector)));

  return err;
}

flash_error_t efl_lld_query_erase(void *instance, uint32_t *msec) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  flash_error_t err = FLASH_NO_ERROR;

  (void)msec;

  /* If there is an erase in progress then the device must be checked.*/
  if (devp->state == FLASH_ERASE) {

    /* Checking for operation in progress.*/
    if ((devp->flash->CON & FMC_CON_WR) == 0U) {

      /* Back to ready state.*/
      devp->state = FLASH_READY;

      err = FLASH_NO_ERROR;
    }
    else {
      /* Recommended time before polling again, this is a simplified
         implementation.*/
      if (msec != NULL) {
        *msec = (uint32_t)WB32_FLASH_WAIT_TIME_MS;
      }

      err = FLASH_BUSY_ERASING;
    }

  }
  else {
    err = FLASH_NO_ERROR;
  }


  return err;
}

flash_error_t efl_lld_verify_erase(void *instance, flash_sector_t sector) {
  EFlashDriver *devp = (EFlashDriver *)instance;
  flash_error_t err = FLASH_NO_ERROR;
  uint32_t *address;

  osalDbgCheck(instance != NULL);
  osalDbgCheck(sector < efl_lld_descriptor.sectors_count);
  osalDbgAssert((devp->state == FLASH_READY) || (devp->state == FLASH_ERASE),
                "invalid state");

  /* No verifying while erasing.*/
  if (devp->state == FLASH_ERASE) {
    return FLASH_BUSY_ERASING;
  }

  /* Address of the sector.*/
  address = (uint32_t *)(efl_lld_descriptor.address +
                         flashGetSectorOffset(getBaseFlash(devp), sector));

  /* FLASH_READY state while the operation is performed.*/
  devp->state = FLASH_READ;

  /* Scanning the sector space.*/
  for (int i = 0U; i < WB32_FLASH_SECTOR_SIZE / sizeof(uint32_t); i++) {
    if (*address != 0x00) {
      err = FLASH_ERROR_VERIFY;
      break;
    }
    address++;
  }

  /* Ready state again.*/
  devp->state = FLASH_READY;

  return err;
}
